# Jarvis

./: .env.example  .eslintrc.cjs  .gitignore  .prettierrc  LICENSE  README.md  docker-compose.yml  k6-load-test.js  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.vue  main.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/server/: .swcrc  Dockerfile  jest.config.ts  package.json  tsconfig.build.json  tsconfig.json
apps/server/prisma/: schema.prisma
apps/server/src/: app.module.ts  env.ts  main.ts
apps/server/src/infrastructure/: infrastructure.module.ts
apps/server/test/: audit.service.spec.ts  chat.service.spec.ts  chunking.service.spec.ts  content-guard.service.spec.ts  context-manager.service.spec.ts  document-parser.service.spec.ts  knowledge.service.spec.ts  model-gateway.spec.ts  platform-integration.service.spec.ts  product.service.spec.ts  reranker.service.spec.ts  search.service.spec.ts
apps/web/: Dockerfile  index.html  nginx.conf  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/web/e2e/: chat.spec.ts  home.spec.ts
apps/web/public/: manifest.json
apps/web/src/: main.ts
apps/web/src/composables/: useAgent.ts  useKnowledgeBase.ts  useStreamChat.ts
apps/web/src/lib/: utils.ts
apps/web/src/pages/: AgentPage.vue  HomePage.vue  KBPage.vue  LoginPage.vue  (+1 more)
项目流程/: Jarvis-技术方案.md
(+87 files in other folders)
